--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <nav class="navbar bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
         <div class="container mx-auto flex justify-between items-center">
             <a href="#" class="text-2xl font-bold">
-                <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
+                <span class="text-white">Logo</span><span class="text-gray-300">Bucket</span>
             </a>
             
             <div class="hidden md:flex space-x-8">
