--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <a href="gallery.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Gallery</a>
                 <a href="about.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">About</a>
                 <a href="contact.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Contact</a>
-                
+                <a href="admin.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Contact</a>
             </div>
         </div>
     </nav>
