--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                 <a href="gallery.html" class="hover:text-gray-300 transition-colors">Gallery</a>
                 <a href="about.html" class="hover:text-gray-300 transition-colors">About</a>
                 <a href="contact.html" class="hover:text-gray-300 transition-colors">Contact</a>
+                <a href="admin.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Admin</a>
             </div>
             
             <button class="md:hidden text-2xl" id="menu-toggle">
@@ -130,7 +131,7 @@
                 <a href="gallery.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Gallery</a>
                 <a href="about.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">About</a>
                 <a href="contact.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Contact</a>
-                <a href="admin.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Contact</a>
+                <a href="admin.html" class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2">Admin</a>
             </div>
         </div>
     </nav>
