--- a/gallery.html
+++ b/gallery.html
@@ -1,99 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery | EliteLogos</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
-        :root {
-            --primary: #000000;
-            --secondary: #222222;
-            --accent: #ffffff;
-            --highlight: #9d9d9d;
-        }
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Montserrat', sans-serif;
-        }
-        body {
-            background-color: var(--primary);
-            color: var(--accent);
-            overflow-x: hidden;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Gallery | EliteLogos</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: 'Montserrat', sans-serif;
+    }
+    .gallery-item {
+      transition: transform 0.2s ease-in-out;
+    }
+    .gallery-item:hover {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body class="min-h-screen">
-    <!-- Navigation -->
-    <nav class="navbar bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="index.html" class="text-2xl font-bold">
-                <span class="text-white">Elite</span><span class="text-gray-300">Logos</span>
-            </a>
-            <div class="hidden md:flex space-x-8">
-                <a href="index.html" class="hover:text-gray-300 transition-colors">Home</a>
-                <a href="gallery.html" class="hover:text-gray-300 transition-colors font-bold">Gallery</a>
-                <a href="about.html" class="hover:text-gray-300 transition-colors">About</a>
-                <a href="contact.html" class="hover:text-gray-300 transition-colors">Contact</a>
-            </div>
-            <button class="md:hidden text-2xl" id="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
-    </nav>
+  <!-- Navigation -->
+  <nav
+    class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg"
+  >
+    <div class="container mx-auto flex justify-between items-center">
+      <a href="index.html" class="text-2xl font-bold">EliteLogos</a>
+      <div class="hidden md:flex space-x-8">
+        <a href="index.html" class="hover:text-gray-300 transition-colors"
+          >Home</a
+        >
+        <a
+          href="gallery.html"
+          class="hover:text-gray-300 transition-colors font-bold"
+          >Gallery</a
+        >
+        <a href="services.html" class="hover:text-gray-300 transition-colors"
+          >Services</a
+        >
+        <a href="about.html" class="hover:text-gray-300 transition-colors"
+          >About</a
+        >
+        <a href="contact.html" class="hover:text-gray-300 transition-colors"
+          >Contact</a
+        >
+      </div>
+      <button class="md:hidden text-2xl" id="menu-toggle">
+        <i class="fas fa-bars" id="menu-icon"></i>
+      </button>
+    </div>
 
-    <!-- Gallery Section -->
-    <section class="py-20 bg-gray-900">
-        <div class="container mx-auto px-6">
-            <h1 class="text-3xl font-bold mb-6">Our Logo Gallery</h1>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8" id="galleryGrid">
-                <!-- Logos will be loaded from localStorage -->
-            </div>
-        </div>
-    </section>
+    <!-- Mobile Menu -->
+    <div
+      class="hidden bg-black bg-opacity-90 absolute w-full left-0 top-16 px-6 pb-4"
+      id="mobile-menu"
+    >
+      <div class="flex flex-col space-y-4 mt-4" id="mobile-nav-items">
+        <a
+          href="index.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >Home</a
+        >
+        <a
+          href="gallery.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >Gallery</a
+        >
+        <a
+          href="services.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >Services</a
+        >
+        <a
+          href="about.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >About</a
+        >
+        <a href="contact.html" class="hover:text-gray-300 transition-colors pb-2"
+          >Contact</a
+        >
+      </div>
+    </div>
+  </nav>
 
-    <footer class="bg-black text-white py-6">
-        <div class="container mx-auto text-center">
-            <p>&copy; 2023 EliteLogos. All rights reserved.</p>
-        </div>
-    </footer>
+  <main class="pt-24 container mx-auto px-6">
+    <h1 class="text-3xl font-bold mb-6">Logo Gallery</h1>
+    <div
+      id="galleryGrid"
+      class="grid grid-cols-1 md:grid-cols-3 gap-6"
+      aria-live="polite"
+    >
+      <!-- Logos will be dynamically inserted here -->
+    </div>
+  </main>
 
-    <script>
-        // Mobile Menu Toggle
-        const menuToggle = document.querySelector('.menu-toggle');
-        const navLinks = document.querySelector('.nav-links');
+  <footer class="bg-black text-white py-6 mt-12">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 EliteLogos. All rights reserved.</p>
+    </div>
+  </footer>
 
-        if (menuToggle && navLinks) {
-            menuToggle.addEventListener('click', () => {
-                navLinks.classList.toggle('active');
-                menuToggle.innerHTML = navLinks.classList.contains('active') ? 
-                    '<i class="fas fa-times"></i>' : '<i class="fas fa-bars"></i>';
-            });
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+
+  <script>
+    // Mobile menu toggle
+    const menuToggle = document.getElementById('menu-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
+    const menuIcon = document.getElementById('menu-icon');
+
+    if (menuToggle && mobileMenu && menuIcon) {
+      menuToggle.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+        if (mobileMenu.classList.contains('hidden')) {
+          menuIcon.classList.replace('fa-times', 'fa-bars');
+        } else {
+          menuIcon.classList.replace('fa-bars', 'fa-times');
+        }
+      });
+    }
+
+    // Your Firebase configuration - replace with your actual config
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    // Function to load logos from Firebase Realtime Database
+    function loadLogos() {
+      const galleryGrid = document.getElementById('galleryGrid');
+      database.ref('logos').orderByChild('timestamp').on('value', (snapshot) => {
+        galleryGrid.innerHTML = ''; // Clear existing logos
+        const logos = snapshot.val();
+
+        if (!logos) {
+          galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
+          return;
         }
 
-        // Load saved logos from localStorage
-        document.addEventListener('DOMContentLoaded', () => {
-            const savedLogos = JSON.parse(localStorage.getItem('elitelogos_logos')) || [];
-            const galleryGrid = document.getElementById('galleryGrid');
-            
-            galleryGrid.innerHTML = '';
-            savedLogos.forEach(logo => {
-                const logoItem = document.createElement('div');
-                logoItem.className = 'bg-gray-800 rounded-lg overflow-hidden';
-                logoItem.innerHTML = `
-                    <img src="${logo.image}" alt="${logo.title}" class="w-full h-48 object-cover">
-                    <div class="p-4">
-                        <h3 class="text-xl font-bold">${logo.title}</h3>
-                        <p class="text-gray-400">${logo.category}</p>
-                    </div>
-                `;
-                galleryGrid.appendChild(logoItem);
-            });
+        Object.keys(logos).forEach((key) => {
+          const logo = logos[key];
+          const logoItem = document.createElement('div');
+          logoItem.className =
+            'gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg';
+          logoItem.innerHTML = `
+            <img src="${logo.image}" alt="${logo.title}" class="w-full h-48 object-cover" />
+            <div class="p-4">
+              <h3 class="text-xl font-bold mb-2">${logo.title}</h3>
+              <p class="text-gray-300 mb-2">${logo.category}</p>
+            </div>
+          `;
+          galleryGrid.appendChild(logoItem);
         });
-    </script>
+      }, (error) => {
+        console.error('Error loading logos:', error);
+        const galleryGrid = document.getElementById('galleryGrid');
+        galleryGrid.innerHTML = '<p class="text-red-500">Failed to load logos.</p>';
+      });
+    }
+
+    // Load logos on page load
+    document.addEventListener('DOMContentLoaded', loadLogos);
+  </script>
 </body>
 </html>
