--- a/gallery.html
+++ b/gallery.html
@@ -127,13 +127,13 @@
 
     // Your Firebase configuration - replace with your actual config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+      authDomain: "thelogobucket-6389b.firebaseapp.com",
+      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com/",
+      projectId: "thelogobucket-6389b",
+      storageBucket: "thelogobucket-6389b.firebasestorage.app",
+      messagingSenderId: "237466771183",
+      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
     };
 
     // Initialize Firebase
