--- a/admin.html
+++ b/admin.html
@@ -123,7 +123,7 @@
                 apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
                 authDomain: "thelogobucket-6389b.firebaseapp.com",
                 databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com/",
-                projectId: "your-project-id",
+                projectId: "thelogobucket-6389b",
                 storageBucket: "thelogobucket-6389b.firebasestorage.app",
                 messagingSenderId: "237466771183",
                 appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
