--- a/gallery.html
+++ b/gallery.html
@@ -39,14 +39,8 @@
           class="hover:text-gray-300 transition-colors font-bold"
           >Gallery</a
         >
-        <a href="services.html" class="hover:text-gray-300 transition-colors"
-          >Services</a
-        >
-        <a href="about.html" class="hover:text-gray-300 transition-colors"
-          >About</a
-        >
-        <a href="contact.html" class="hover:text-gray-300 transition-colors"
-          >Contact</a
+        <a href="admin.html" class="hover:text-gray-300 transition-colors"
+          >Admin</a
         >
       </div>
       <button class="md:hidden text-2xl" id="menu-toggle">
@@ -71,17 +65,9 @@
           >Gallery</a
         >
         <a
-          href="services.html"
+          href="admin.html"
           class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
-          >Services</a
-        >
-        <a
-          href="about.html"
-          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
-          >About</a
-        >
-        <a href="contact.html" class="hover:text-gray-300 transition-colors pb-2"
-          >Contact</a
+          >Admin</a
         >
       </div>
     </div>
@@ -127,7 +113,7 @@
 
     // Your Firebase configuration - replace with your actual config
     const firebaseConfig = {
-      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
+            apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
       authDomain: "thelogobucket-6389b.firebaseapp.com",
       databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com/",
       projectId: "thelogobucket-6389b",
