--- a/admin.html
+++ b/admin.html
@@ -5,10 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin Panel | EliteLogos</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
   <style>
     body {
       background-color: #000;
@@ -23,124 +19,33 @@
     }
   </style>
 </head>
-<body class="min-h-screen">
-  <!-- Navigation -->
-  <nav
-    class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg"
-  >
-    <div class="container mx-auto flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold">EliteLogos</a>
-      <div class="hidden md:flex space-x-8">
-        <a href="index.html" class="hover:text-gray-300 transition-colors"
-          >Home</a
-        >
-        <a href="gallery.html" class="hover:text-gray-300 transition-colors"
-          >Gallery</a
-        >
-        <a href="admin.html" class="hover:text-gray-300 transition-colors font-bold"
-          >Admin</a
-        >
-      </div>
-      <button class="md:hidden text-2xl" id="menu-toggle">
-        <i class="fas fa-bars" id="menu-icon"></i>
-      </button>
-    </div>
+<body class="min-h-screen p-6">
+  <h1 class="text-3xl font-bold mb-6">Admin Panel - Add New Logo</h1>
 
-    <!-- Mobile Menu -->
-    <div
-      class="hidden bg-black bg-opacity-90 absolute w-full left-0 top-16 px-6 pb-4"
-      id="mobile-menu"
-    >
-      <div class="flex flex-col space-y-4 mt-4" id="mobile-nav-items">
-        <a
-          href="index.html"
-          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
-          >Home</a
-        >
-        <a
-          href="gallery.html"
-          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
-          >Gallery</a
-        >
-        <a
-          href="admin.html"
-          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
-          >Admin</a
-        >
-      </div>
-    </div>
-  </nav>
+  <form id="addLogoForm" class="mb-8 max-w-lg">
+    <label class="block mb-2" for="logoTitle">Logo Title</label>
+    <input type="text" id="logoTitle" required class="w-full p-2 mb-4 rounded text-black" />
 
-  <main class="pt-24 container mx-auto px-6 max-w-lg">
-    <h1 class="text-3xl font-bold mb-6">Add New Logo</h1>
-    <form id="addLogoForm" class="bg-gray-800 p-6 rounded-lg">
-      <div class="mb-4">
-        <label for="logoTitle" class="block mb-2">Logo Title</label>
-        <input
-          type="text"
-          id="logoTitle"
-          name="logoTitle"
-          required
-          class="w-full p-2 rounded text-black"
-        />
-      </div>
+    <label class="block mb-2" for="logoImage">Logo Image</label>
+    <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded" />
 
-      <div class="mb-4">
-        <label for="logoImage" class="block mb-2">Logo Image</label>
-        <input
-          type="file"
-          id="logoImage"
-          name="logoImage"
-          accept="image/*"
-          capture="environment"
-          required
-          class="w-full p-2 rounded"
-        />
-        <small class="text-gray-400"
-          >(Take photo or upload from device)</small
-        >
-      </div>
+    <label class="block mb-2" for="logoCategory">Category</label>
+    <select id="logoCategory" required class="w-full p-2 mb-4 rounded text-black">
+      <option value="" disabled selected>Select category</option>
+      <option value="Corporate">Corporate</option>
+      <option value="Personal">Personal</option>
+      <option value="Retail">Retail</option>
+    </select>
 
-      <div class="mb-4">
-        <label for="logoCategory" class="block mb-2">Category</label>
-        <select
-          id="logoCategory"
-          name="logoCategory"
-          required
-          class="w-full p-2 rounded text-black"
-        >
-          <option value="" disabled selected>Select category</option>
-          <option value="Corporate">Corporate</option>
-          <option value="Personal">Personal</option>
-          <option value="Retail">Retail</option>
-        </select>
-      </div>
+    <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500">
+      Add Logo
+    </button>
+  </form>
 
-      <button
-        type="submit"
-        class="bg-gold text-black px-4 py-2 rounded hover:bg-yellow-400 transition"
-      >
-        Add Logo
-      </button>
-    </form>
-
-    <section class="mt-12">
-      <h2 class="text-2xl font-bold mb-4">Gallery Preview</h2>
-      <div
-        id="galleryGrid"
-        class="grid grid-cols-1 md:grid-cols-3 gap-6"
-        aria-live="polite"
-      >
-        <!-- Logos will appear here -->
-      </div>
-    </section>
-  </main>
-
-  <footer class="bg-black text-white py-6 mt-12">
-    <div class="container mx-auto text-center">
-      <p>&copy; 2023 EliteLogos. All rights reserved.</p>
-    </div>
-  </footer>
+  <section class="mt-12">
+    <h2 class="text-2xl font-bold mb-4">Gallery Preview</h2>
+    <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6" aria-live="polite"></div>
+  </section>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
@@ -148,46 +53,27 @@
 
   <script>
     // Password protection
-    const ADMIN_PASSWORD = "yourpassword123"; // Change this to your password
+    const ADMIN_PASSWORD = "yourpassword123"; // Change this
 
-    if (window.location.pathname.includes("admin.html")) {
-      const auth = sessionStorage.getItem("admin-auth");
-      if (auth !== ADMIN_PASSWORD) {
-        const entered = prompt("Enter admin password:");
-        if (entered === ADMIN_PASSWORD) {
-          sessionStorage.setItem("admin-auth", ADMIN_PASSWORD);
-        } else {
-          alert("Incorrect password!");
-          window.location.href = "index.html";
-        }
+    if (!sessionStorage.getItem("admin-auth")) {
+      const entered = prompt("Enter admin password:");
+      if (entered === ADMIN_PASSWORD) {
+        sessionStorage.setItem("admin-auth", ADMIN_PASSWORD);
+      } else {
+        alert("Incorrect password!");
+        window.location.href = "index.html";
       }
-    }
-
-    // Mobile menu toggle
-    const menuToggle = document.getElementById("menu-toggle");
-    const mobileMenu = document.getElementById("mobile-menu");
-    const menuIcon = document.getElementById("menu-icon");
-
-    if (menuToggle && mobileMenu && menuIcon) {
-      menuToggle.addEventListener("click", () => {
-        mobileMenu.classList.toggle("hidden");
-        if (mobileMenu.classList.contains("hidden")) {
-          menuIcon.classList.replace("fa-times", "fa-bars");
-        } else {
-          menuIcon.classList.replace("fa-bars", "fa-times");
-        }
-      });
     }
 
     // Firebase config - REPLACE with your actual config
     const firebaseConfig = {
-      apiKey: "AIzaSyB3yIzrGdlTMrWf49Ql0pV7-HzEIG_yVxM",
-      authDomain: "thelogobucket-6389b.firebaseapp.com",
-      databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com/",
-      projectId: "thelogobucket-6389b",
-      storageBucket: "thelogobucket-6389b.firebasestorage.app",
-      messagingSenderId: "237466771183",
-      appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://YOUR_PROJECT_ID.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID",
     };
 
     // Initialize Firebase
@@ -205,15 +91,13 @@
           galleryGrid.innerHTML = "";
           const logos = snapshot.val();
           if (!logos) {
-            galleryGrid.innerHTML =
-              '<p class="text-gray-400">No logos found.</p>';
+            galleryGrid.innerHTML = '<p class="text-gray-400">No logos found.</p>';
             return;
           }
           Object.keys(logos).forEach((key) => {
             const logo = logos[key];
             const logoItem = document.createElement("div");
-            logoItem.className =
-              "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+            logoItem.className = "bg-gray-800 rounded-lg overflow-hidden shadow-lg";
             logoItem.innerHTML = `
               <img src="${logo.image}" alt="${logo.title}" class="w-full h-48 object-cover" />
               <div class="p-4">
@@ -227,8 +111,7 @@
         },
         (error) => {
           console.error("Error loading logos:", error);
-          galleryGrid.innerHTML =
-            '<p class="text-red-500">Failed to load logos.</p>';
+          galleryGrid.innerHTML = '<p class="text-red-500">Failed to load logos.</p>';
         }
       );
     }
@@ -248,7 +131,7 @@
       }
     }
 
-    // Save logo to Firebase
+    // Convert image file to base64 and save logo
     function saveLogo(title, imageFile, category) {
       return new Promise((resolve, reject) => {
         const reader = new FileReader();
