--- a/admin.html
+++ b/admin.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Admin Panel | EliteLogos</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
   <style>
     body {
       background-color: #000;
@@ -19,33 +23,113 @@
     }
   </style>
 </head>
-<body class="min-h-screen p-6">
-  <h1 class="text-3xl font-bold mb-6">Admin Panel - Add New Logo</h1>
+<body class="min-h-screen">
+  <!-- Navigation -->
+  <nav
+    class="bg-black bg-opacity-90 text-white py-4 px-6 fixed w-full z-40 shadow-lg"
+  >
+    <div class="container mx-auto flex justify-between items-center">
+      <a href="index.html" class="text-2xl font-bold">EliteLogos</a>
+      <div class="hidden md:flex space-x-8">
+        <a href="index.html" class="hover:text-gray-300 transition-colors"
+          >Home</a
+        >
+        <a href="gallery.html" class="hover:text-gray-300 transition-colors"
+          >Gallery</a
+        >
+        <a href="admin.html" class="hover:text-gray-300 transition-colors font-bold"
+          >Admin</a
+        >
+      </div>
+      <button class="md:hidden text-2xl" id="menu-toggle">
+        <i class="fas fa-bars" id="menu-icon"></i>
+      </button>
+    </div>
 
-  <form id="addLogoForm" class="mb-8 max-w-lg">
-    <label class="block mb-2" for="logoTitle">Logo Title</label>
-    <input type="text" id="logoTitle" required class="w-full p-2 mb-4 rounded text-black" />
+    <!-- Mobile Menu -->
+    <div
+      class="hidden bg-black bg-opacity-90 absolute w-full left-0 top-16 px-6 pb-4"
+      id="mobile-menu"
+    >
+      <div class="flex flex-col space-y-4 mt-4" id="mobile-nav-items">
+        <a
+          href="index.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >Home</a
+        >
+        <a
+          href="gallery.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >Gallery</a
+        >
+        <a
+          href="admin.html"
+          class="hover:text-gray-300 transition-colors border-b border-gray-800 pb-2"
+          >Admin</a
+        >
+      </div>
+    </div>
+  </nav>
 
-    <label class="block mb-2" for="logoImage">Logo Image</label>
-    <input type="file" id="logoImage" accept="image/*" required class="w-full p-2 mb-4 rounded" />
+  <main class="pt-24 container mx-auto px-6 max-w-lg">
+    <h1 class="text-3xl font-bold mb-6">Admin Panel - Add New Logo</h1>
 
-    <label class="block mb-2" for="logoCategory">Category</label>
-    <select id="logoCategory" required class="w-full p-2 mb-4 rounded text-black">
-      <option value="" disabled selected>Select category</option>
-      <option value="Corporate">Corporate</option>
-      <option value="Personal">Personal</option>
-      <option value="Retail">Retail</option>
-    </select>
+    <form id="addLogoForm" class="mb-8">
+      <label class="block mb-2" for="logoTitle">Logo Title</label>
+      <input
+        type="text"
+        id="logoTitle"
+        required
+        class="w-full p-2 mb-4 rounded text-black"
+      />
 
-    <button type="submit" class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500">
-      Add Logo
-    </button>
-  </form>
+      <label class="block mb-2" for="logoImage">Logo Image</label>
+      <input
+        type="file"
+        id="logoImage"
+        accept="image/*"
+        required
+        class="w-full p-2 mb-4 rounded"
+      />
+      <small class="text-gray-400 mb-4 block"
+        >(Take photo or upload from device)</small
+      >
 
-  <section class="mt-12">
-    <h2 class="text-2xl font-bold mb-4">Gallery Preview</h2>
-    <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-3 gap-6" aria-live="polite"></div>
-  </section>
+      <label class="block mb-2" for="logoCategory">Category</label>
+      <select
+        id="logoCategory"
+        required
+        class="w-full p-2 mb-4 rounded text-black"
+      >
+        <option value="" disabled selected>Select category</option>
+        <option value="Corporate">Corporate</option>
+        <option value="Personal">Personal</option>
+        <option value="Retail">Retail</option>
+      </select>
+
+      <button
+        type="submit"
+        class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-500"
+      >
+        Add Logo
+      </button>
+    </form>
+
+    <section>
+      <h2 class="text-2xl font-bold mb-4">Gallery Preview</h2>
+      <div
+        id="galleryGrid"
+        class="grid grid-cols-1 md:grid-cols-3 gap-6"
+        aria-live="polite"
+      ></div>
+    </section>
+  </main>
+
+  <footer class="bg-black text-white py-6 mt-12">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2023 EliteLogos. All rights reserved.</p>
+    </div>
+  </footer>
 
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
@@ -63,6 +147,22 @@
         alert("Incorrect password!");
         window.location.href = "index.html";
       }
+    }
+
+    // Mobile menu toggle
+    const menuToggle = document.getElementById("menu-toggle");
+    const mobileMenu = document.getElementById("mobile-menu");
+    const menuIcon = document.getElementById("menu-icon");
+
+    if (menuToggle && mobileMenu && menuIcon) {
+      menuToggle.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
+        if (mobileMenu.classList.contains("hidden")) {
+          menuIcon.classList.replace("fa-times", "fa-bars");
+        } else {
+          menuIcon.classList.replace("fa-bars", "fa-times");
+        }
+      });
     }
 
     // Firebase config - REPLACE with your actual config
